# Deep-learning-from-scratch_20200419

./: .gitignore  2-3_パーセプトロンの実装.ipynb  3-4_ニューラルネットワーク.ipynb  3-5_出力層の設計.ipynb  3-6_MNIST.ipynb  4-2_損失関数.ipynb  4-3_数値微分.ipynb  4-4_勾配.ipynb  5-4_誤差逆伝搬法.ipynb  5-7_誤差逆伝播法の実装.ipynb  pyproject.toml
