[tool.poetry]
name = "deep-learning-from-scratch_20200419"
version = "0.1.0"
description = ""
authors = ["eda3 <gerorin1010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.7.9"
jupyterlab = "^2.1.1"
numpy = "^1.18.3"
matplotlib = "^3.2.1"
pillow = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
